--- a/styles/app.css
+++ b/styles/app.css
@@ -9,8 +9,10 @@
 
 .covered {
   background-color: black;
+  /*background-image: url('../img/card-back.png');*/
 }
 
 .hand {
   overflow: auto;
 }
+
